syntax = "proto3";

import "DataFieldValue.proto";

package ru.sovcombank.hackaton.proto;
option java_multiple_files  = true;
option java_outer_classname = "DataRowProto";
option optimize_for         = SPEED;

/**
  Тип данных строки для типа AdvInfoData.
  Поля rowIdent, incrementDelete - обязательны для заполнения
  Коллекция values - должна содержать хотя бы одно значение при установленном флаге incrementDelete = false;

  Значения полей строки в GUI обновляется по наличию значений для этих полей в коллекции values.
*/

message DataRow {
  string    rowIdent                = 1;  // Идентификатор записи
  bool      incrementDelete         = 2;  // Инкрементальное удаление записи (Удаление записи при инкрементальной передаче данных)
  repeated  DataFieldValue  values  = 3;  // Описание поля с установкой значения поля
}